--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
     "compilerOptions": {
-        "module": "commonjs",
+        "module": "amd",
         "target": "es5",
         "noImplicitAny": false,
-        "outDir": "built",
-        "rootDir": ".",
+        "outDir": "dev/js",
         "sourceMap": false,
         "watch": true
     },
